// storage gateway rpc request/response

syntax = "proto3";
import "common.proto";
import "journal/journal.proto";
package huawei.proto;

service Consumer {
    // get the journal marker of specified volume and comsumer
    rpc GetJournalMarker(GetJournalMarkerRequest) returns(GetJournalMarkerResponse) {}
    rpc GetJournalList(GetJournalListRequest) returns(GetJournalListResponse) {}
    // update consumer maker when time out or comsumed a batch of logs
    rpc UpdateConsumerMarker(UpdateConsumerMarkerRequest) returns(UpdateConsumerMarkerResponse) {}
}

enum CONSUMER_TYPE {
    CONSUMER_NONE = 0;
    REPLAYER = 1;
    REPLICATOR = 2;
    CONSUMER_BOTH = 3;
}
// journal replayer messages
message GetJournalMarkerRequest {
    string uuid = 1;
    string vol_id = 2;
    CONSUMER_TYPE type = 3;
}
message GetJournalMarkerResponse {
    RESULT result = 1;
    JournalMarker marker = 2;
}
message GetJournalListRequest {
    string uuid = 1;
    string vol_id = 2;
    CONSUMER_TYPE type = 3;
    JournalMarker marker = 4;
    // limit indicates that the max count of journal files will be returned
    int32 limit = 5;
}
message GetJournalListResponse {
    RESULT result = 1;
    // the journal elments
    repeated JournalElement journals = 2;
}
message UpdateConsumerMarkerRequest {
    string uuid = 1;
    string vol_id = 2;
    CONSUMER_TYPE type = 3;
    JournalMarker marker = 4;
}
message UpdateConsumerMarkerResponse {
    RESULT result = 1;
}
